--- a/loadExperiment.html
+++ b/loadExperiment.html
@@ -5,16 +5,16 @@
         <link href="./css/loadExperiment.css" type="text/css" rel="stylesheet">
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <script type="module" src="./js/remoteExperiment/loadExperimentEventListeners.js"></script>
-        <script type="module" src="./js/headerFunctions.js"></script>
+        <script type="module" src="./components/header/header.js"></script>
+        <script type="module" src="./components/footer/footer.js"></script>
+        <script type="module" src="./js/settings/themeSettings.js"></script>
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
     </head>
     <body> 
-        <header class = "header">
-            <a id="homeButton" class="iconWrapper" onclick="reset()"><img class="home icon" src="./media/home_icon.png" alt="Home Icon"></a>
-            <h1>Viinvara</h1>
-            <!--<a class="iconWrapper" onclick=""><img class="help icon" src="./media/help_icon.png" alt="Help Icon"></a>-->        
+        <header class="header" id="header" header-type="home">
+            loading header...      
         </header>
         <main class="mainBody">
             <div class="pageContent">
@@ -37,12 +37,8 @@
                 </div>   
             </div>
         </main>
-        <footer class = "footer">
-            <span class="footerNote">09/07/2025</span>
-            <span class="footerNote">V2.0</span>
-            <span class="footerNote">© Linda Steiner (linste.zh@gmail.com)</span>
-            <span class="footerNote">UZH - Zurich</span>
-            <span class="footerNote"><a href="https://github.com/linste-zh/viinvara" target="_blank">Project Git Page</a></span>
+        <footer class="footer" id="footer">
+            loading footer ...
         </footer>
     </body>
 </html>
