--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <title>Welcome</title>
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="./css/index.css" type="text/css" rel="stylesheet">
-        <script type="module" src="./js/index/indexEventListeners.js"></script>
+        <link href="./css/accordionSettings.css" type="text/css" rel="stylesheet">
         <script type="module" src="./components/header/header.js"></script>
         <script type="module" src="./components/footer/footer.js"></script>
         <script type="module" src="./js/settings/themeSettings.js"></script>
+        <script type="module" src="./js/index/indexEventListeners.js"></script>
         <script type="module" src="./components/settingsAccordion/settingsAccordion.js"></script>
         <script src="./components/settingsAccordion/settingsAccordionBehaviour.js"></script>
         <meta charset="UTF-8">
