added basic home header

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <p>
                         Viinvara allows the rating of a variable on some scale at regular intervals while watching a video.</br>
                         The results are presented as an interactive graph and can be downloaded as a CSV table or JPG.</br>
+                        Settings can also be downloaded as files and sent to participant for remote access.</br>
                         This work is based on <a href="https://80113hunterhsu.github.io/VariableTester/" target="_blank">MacIntyre's Idiodynamic Software/the Anion Variable Tester</a>.
                     </p>
                 </div>
