finalised V3: add icons to experiment page, fix bug with button display, update footer, update ReadMe

--- a/experiment.html
+++ b/experiment.html
@@ -22,10 +22,10 @@
             <div class="pageContent">
                 <div class="textPanel">
                     <span id="instruction">Rate your Video</span>
-                    <button id="exitButton">continue <img class="exitIcon" src="./media/exit_icon.png"></button>
+                    <button id="exitButton">continue <img class="btnIcon" src="./media/exit_icon.png"></button>
                 </div>
                 <div id="videoContainer" class="videoContainer">
-                    <button id="setUpButton" class="bigButton">pick source</button>
+                    <button id="setUpButton" class="bigButton">pick source<img class="btnIcon" src="./media/upload_vid.png"></button>
                 </div>
                 <div class="ratingScaleContainer">
                     <div id="ratingScale" class="ratingScale"></div>
