show video per default in results, icon on button, clearer text

--- a/results.html
+++ b/results.html
@@ -37,8 +37,8 @@
                             <img id="videoArrow" class="arrowIcon" src="./media/arrow_icon.png">
                         </div>
                         <div id="videoContainer" class="videoContainer">
-                            <b>please select your video file again</b>
-                            <button id="setUpButton" class="bigButton" onclick="setUpVideo()">pick source</button>
+                            <p>please select your video file again to make the graph interactive</p>
+                            <button id="setUpButton" class="bigButton" onclick="setUpVideo()">pick source<img class="btnIcon" src="./media/upload_vid.png"></button>
                         </div>
                     </div>
                 </section>
