--- a/results.html
+++ b/results.html
@@ -22,6 +22,8 @@
             <div class="pageContent">
                 <div class="textPanel" id="instruction">
                     <h1>Here are your results!</h1>
+                    <p>The graph can be set to display your datapoints either at the interval (i.e. when the rating was requested) or at their timestamp (i.e. when the rating was given).</br>
+                        If you have your video file loaded up, you can click anywhere in the graph to play the video at that point and vice versa.</p>
                 </div>
                 <div id="displayMenu">
                     <div class="displayOption" id="intervalButton" onclick="toggleGraph('interval')">Interval Graph</div>
@@ -37,6 +39,7 @@
                             <img id="videoArrow" class="arrowIcon" src="./media/arrow_icon.png">
                         </div>
                         <div id="videoContainer" class="videoContainer">
+
                             <p>please select your video file again to make the graph interactive</p>
                             <button id="setUpButton" class="bigButton" onclick="setUpVideo()">pick source<img class="btnIcon" src="./media/upload_vid.png"></button>
                         </div>
