load experiment change file button, icons on buttons, improved display of buttons

--- a/loadExperiment.html
+++ b/loadExperiment.html
@@ -32,7 +32,7 @@
                         <input type="text" class = "textInput" id="nameField" autofocus>
                     </div>
                     <div class="infoField" id="infoField">
-                        <button id="remoteSettingsImportButton" class="downloadImg" title="click to select file">upload settings file</button>
+                        <button id="remoteSettingsImportButton" class="bigButton" title="click to select file">upload settings file<img class="btnIcon" src="./media/upload_doc.png"></button>
                     </div> 
                 </div>   
             </div>
