improved website titles

--- a/createExperiment.html
+++ b/createExperiment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Create Remote Experiment File</title>
+        <title>Create</title>
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="./css/createExperiment.css" type="text/css" rel="stylesheet">
         <link href="./css/accordionSettings.css" type="text/css" rel="stylesheet">
