--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome</title>
+        <title>Viinvara Home</title>
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="./css/index.css" type="text/css" rel="stylesheet">
         <link href="./css/accordionSettings.css" type="text/css" rel="stylesheet">
