--- a/loadExperiment.html
+++ b/loadExperiment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Results</title>
+        <title>Load</title>
         <link href="./css/loadExperiment.css" type="text/css" rel="stylesheet">
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <script type="module" src="./js/remoteExperiment/loadExperimentEventListeners.js"></script>
