add download icons for results page

--- a/results.html
+++ b/results.html
@@ -45,8 +45,8 @@
                     </div>
                 </section>
                 <div id="exportCSV" class="csvContainer">
-                    <a id="csvLink" onclick="createCSV()">Download Data</a>
-                    <a id="jpegLink" onclick="createJpeg()">Download Current Graph</a>
+                    <a id="csvLink" onclick="createCSV()" class="bigButton">Download Data<img class="btnIcon" src="./media/download_doc.png"></a>
+                    <a id="jpegLink" onclick="createJpeg()" class="bigButton">Download Current Graph<img class="btnIcon" src="./media/download_graph.png"></a>
                 </div>
             </div>
         </main>
