name change Viinvara to Vinvara

--- a/createExperiment.html
+++ b/createExperiment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Create</title>
+        <title>Create Remote Experiment</title>
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="./css/createExperiment.css" type="text/css" rel="stylesheet">
         <link href="./css/accordionSettings.css" type="text/css" rel="stylesheet">
@@ -12,7 +12,7 @@
         <script type="module" src="./components/settingsAccordion/settingsAccordion.js"></script>
         <script src="./components/settingsAccordion/settingsAccordionBehaviour.js"></script>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
+        <link rel="icon" type="image/x-icon" href="./media/Vinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
     </head>
     <body>
@@ -32,7 +32,7 @@
                             <li>Add a message to be shown to the participant (optional).</li>
                             <li>Adjust the settings (including the colour theme) to your liking.</li>
                             <li>Download the file.</li>
-                            <li>Send it and your video file to the participant and direct them to <a href="loadExperiment.html" target="_blank">https://linste-zh.github.io/viinvara/loadExperiment.html</a></li>
+                            <li>Send it and your video file to the participant and direct them to <a href="loadExperiment.html" target="_blank">https://linste-zh.github.io/Vinvara/loadExperiment.html</a></li>
                             <li>They will only be able to fill out their name/participant ID and start the experiment. They will still have to upload the local MP4 file of the video.</li>
                         </ol>
                     </p>
