--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Viinvara Home</title>
+        <title>Vinvara Home</title>
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="./css/index.css" type="text/css" rel="stylesheet">
         <link href="./css/accordionSettings.css" type="text/css" rel="stylesheet">
@@ -12,7 +12,7 @@
         <script type="module" src="./components/settingsAccordion/settingsAccordion.js"></script>
         <script src="./components/settingsAccordion/settingsAccordionBehaviour.js"></script>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
+        <link rel="icon" type="image/x-icon" href="./media/Vinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
     </head>
     <body>
@@ -28,10 +28,10 @@
                     <button class="themeOption gray" id="grayThemeButton"></button>
                 </div>
                 <div class="textPanel">
-                    <h1>Viinvara</h1>
+                    <h1>Vinvara</h1>
                     <h2>The <b>Vi</b>deo <b>In</b>terval <b>Va</b>riable <b>Ra</b>ter</h2>
                     <p>
-                        Viinvara allows the rating of a variable on some scale at regular intervals while watching a video.</br>
+                        Vinvara allows the rating of a variable on some scale at regular intervals while watching a video.</br>
                         The results are presented as an interactive graph and can be downloaded as a CSV table or JPG.</br>
                         Settings can also be downloaded as files and sent to participant for remote access.</br>
                         This work is based on <a href="https://80113hunterhsu.github.io/VariableTester/" target="_blank">MacIntyre's Idiodynamic Software/the Anion Variable Tester</a>.
