--- a/loadExperiment.html
+++ b/loadExperiment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Load</title>
+        <title>Load Remote Experiment</title>
         <link href="./css/loadExperiment.css" type="text/css" rel="stylesheet">
         <link href="./css/basicLayout.css" type="text/css" rel="stylesheet">
         <script type="module" src="./js/remoteExperiment/loadExperimentEventListeners.js"></script>
@@ -9,7 +9,7 @@
         <script type="module" src="./components/footer/footer.js"></script>
         <script type="module" src="./js/settings/themeSettings.js"></script>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
+        <link rel="icon" type="image/x-icon" href="./media/Vinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
     </head>
     <body> 
@@ -21,7 +21,7 @@
                 <div class="textPanel">
                     <h1>Load Experiment</h1>
                     <p>
-                        Welcome to Viinvara, the Video Interval Variable Rater software. On this page, you can upload a settings file to start a premade experiment.</br>
+                        Welcome to Vinvara, the Video Interval Variable Rater software. On this page, you can upload a settings file to start a premade experiment.</br>
                         Enter your name or participant ID and upload the settings file (JSON file, ".js").</br>
                         The video needs to be uploaded on the next page.
                     </p>
