--- a/results.html
+++ b/results.html
@@ -11,11 +11,11 @@
         <script type="module" src="./js/settings/themeSettings.js"></script>
         <script src="./js/results/results.js"></script>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="./media/viinvara.ico">
+        <link rel="icon" type="image/x-icon" href="./media/Vinvara.ico">
         <!--Font in icon: Imprint MT Shadow-->
     </head>
     <body onload="setUp()" onresize="refresh()">
-        <header class="header" id="header" header-type="inex">
+        <header class="header" id="header" header-type="index">
             loading header...
         </header>
         <main class="mainBody">
