improved reloading stop

--- a/experiment.html
+++ b/experiment.html
@@ -15,7 +15,7 @@
 
     
     <body>
-        <header class="header" id="header" header-type="inex">
+        <header class="header" id="header" header-type="index">
             loading header...
         </header>
         <main class="mainBody">
