minor display improvements

--- a/createExperiment.html
+++ b/createExperiment.html
@@ -39,7 +39,6 @@
                 </div>
                 <section class="settings">
                     <h1>Set Up File</h1>
-                    <img id="settingsImportButton" src="./media/upload_doc.png" class="downloadImg" title="import settings from existing file">
                     <div class="var settingsContainer">
                         <label>Colour Theme</label>
                         <div class="themeChoice">
@@ -64,8 +63,9 @@
                     <div class="exp settingsContainer" id="settingsContainer">
                         loading settings...                     
                     </div>
-                    <div class="exportButtonContainer">                        
-                        <button id="remoteSettingsExportButton" class="exportButton">Export Settings as File</button>
+                    <div class="exportButtonContainer">
+                        <button id="settingsImportButton" class="exportButton">Edit Existing File<img class="btnIcon" src="./media/upload_doc.png"></button>
+                        <button id="remoteSettingsExportButton" class="exportButton">Create Full Settings File<img class="btnIcon" src="./media/download_doc.png"></button>
                     </div>
                 </section>
             </div>
